--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,13 @@ html, body {
     background-color: #202020;
     color: #dcdcdc;
 }
+
+#frameDiv {
+    width: 100%;
+    height: 80vh;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+}
