--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@
     --innerMargin: 1vw;
     --formatPickerWidth: 20vw;
     --editorWidth: 56vw;
-    --previewWidth: 20vw;
+    --previewWidth: 19vw;
 
     background-image: url('/imgs/bg.jpg');
     background-size: cover;
@@ -32,9 +32,11 @@
 
 body {
     margin: 0;
+    height: 100vh;
+    overflow: hidden;
 }
 
-#topBar{
+header{
     width: 100%;
     height: 3vh;
     margin-top: 1vh;
@@ -43,7 +45,7 @@ body {
     text-align: center;
 }
 
-#topBar img {
+header img {
     display: inline-block;
     width: auto;
     height: 100%;
@@ -51,19 +53,17 @@ body {
     fill: white;
 }
 
-#vr {
+#line {
     display: inline-block;
     width: 2px;
     height: 100%;
     margin-inline: 2vw;
-
     background-color: white;
 }
 
-content {
+main {
     display: flex;
     height: 96vh;
-
     justify-content: space-between;
 }
 
@@ -74,7 +74,6 @@ content {
     width: var(--formatPickerWidth);
     min-width: 200px;
     margin-top: -4vh;
-
     border-right: 5px solid var(--foregroundColour);
     backdrop-filter: blur(20px);
 }
@@ -85,19 +84,15 @@ content {
     height: calc(100% / var(--noFormats));
     width: 100%;
     overflow: hidden;
-
     border: none;
     border-bottom: 5px solid var(--foregroundColour);
-
     background-color: #ffffff15;
     color: var(--foregroundColour);
 }
 
 #formatBar button h1 {
     margin: 0;
-
     float: left;
-    
     font-family: 'Motiva-Black';
     font-size: calc(30vh / var(--noFormats));
     font-weight: normal;
@@ -107,7 +102,6 @@ content {
     position: absolute;
     left: 6px;
     top: calc(30vh / var(--noFormats) + 6px);
-    
     font-family: 'lulo';
     font-size: calc(6vh / var(--noFormats));
     color: #ffffff99;
@@ -141,7 +135,7 @@ content {
     height: calc(var(--editorWidth) / var(--aspectRatio));
     max-height: 70%;
     width: var(--editorWidth);
-    margin: auto var(--innerMargin) auto calc(var(--innerMargin) + var(--outerMargin));
+    margin: auto var(--innerMargin) auto var(--innerMargin);
     overflow: hidden;
 }
 
@@ -158,35 +152,36 @@ img {
     border: 2px solid var(--highlightColour);
 }
 
-.controls button, .controls button img {
-    border: 0;
-    padding: 0;
-    height: 51px;
-    width: 51px;
-}
-
-#topControls {
+.controls {
+    pointer-events: none;
     position: absolute;
     display: flex;
-    width: 100%;
-    height: 51px;
-    top: 10vh;
-
     justify-content: center;
+    align-items: center;
+    margin: 0;
 }
-
+.controls button, .controls button img {
+    pointer-events: all;
+    border: 0;
+    padding: 0;
+    height: 6vh;
+    width: 6vh;
+}
+.innerControls{
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    height: 60px;
+    margin-inline: -25%;
+}
+#topControls {
+    margin-bottom: 75vh;
+}
 #rotateLeft {
     margin-right: 20px;
 }
-
 #bottomControls {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    height: 50px;
-    bottom: 5vh;
-
-    justify-content: center;
+    margin-top: 75vh;
 }
 #bottomControls button {
     width: 20%;
@@ -206,8 +201,35 @@ img {
     color: var(--foregroundColour);
 }
 
+#editorControls {
+    width: 100%;
+    left: 0;
+    top: 6vh;
+    height: 92vh;
+}
+
+#exportControls {
+    right: var(--outerMargin);
+    top: 6vh;
+    height: 92vh;
+    width: var(--previewWidth);  
+}
+#exportControls div {
+    width: 7vh;
+}
+#exportControls div button {
+    height: 7vh;
+    width: 7vh;
+    margin-block: calc(var(--previewWidth) * (6/8.5) + 10vh);
+}
+#exportControls div button img {
+    height: 7vh;
+    width: 7vh;
+}
+
 object, #placeHolder {
     width: var(--previewWidth);
     height: calc(var(--previewWidth) * (12/8.5));
-    margin: auto var(--outerMargin) auto 0;
+    margin-right: var(--outerMargin);
+    margin-block: calc(48vh - (var(--previewWidth) * (6/8.5)));
 }
