--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,9 @@
     --editorWidth: 56vw;
     --previewWidth: 19vw;
 
+    --headerHeight: max(3vh, 20px);
+    --mainHeight: calc(100vh - var(--headerHeight) - 2vh);
+
     background-image: url('/imgs/bg.jpg');
     background-size: cover;
     color: var(--foregroundColour);
@@ -38,21 +41,17 @@ body {
 
 header{
     width: 100%;
-    height: 3vh;
-    margin-top: 1vh;
-
+    height: var(--headerHeight);
+    margin-block: 1vh;
     overflow: hidden;
     text-align: center;
 }
-
 header img {
     display: inline-block;
     width: auto;
     height: 100%;
-
     fill: white;
 }
-
 #line {
     display: inline-block;
     width: 2px;
@@ -63,7 +62,7 @@ header img {
 
 main {
     display: flex;
-    height: 96vh;
+    height: var(--mainHeight);
     justify-content: space-between;
 }
 
@@ -73,7 +72,7 @@ main {
     height: 100vh;
     width: var(--formatPickerWidth);
     min-width: 200px;
-    margin-top: -4vh;
+    margin-top: min(-5vh, -20px);
     border-right: 5px solid var(--foregroundColour);
     backdrop-filter: blur(20px);
 }
@@ -153,12 +152,14 @@ img {
 }
 
 .controls {
-    pointer-events: none;
     position: absolute;
     display: flex;
+    top: calc(var(--headerHeight) + 2vh);
+    height: var(--mainHeight);
+    margin: 0; 
     justify-content: center;
-    align-items: center;
-    margin: 0;
+    align-items: center; 
+    pointer-events: none;
 }
 .controls button, .controls button img {
     pointer-events: all;
@@ -171,22 +172,22 @@ img {
     display: flex;
     justify-content: center;
     width: 50%;
-    height: 60px;
     margin-inline: -25%;
 }
 #topControls {
-    margin-bottom: 75vh;
+    margin-bottom: 80vh;
 }
 #rotateLeft {
     margin-right: 20px;
 }
 #bottomControls {
-    margin-top: 75vh;
+    margin-top: 80vh;
 }
 #bottomControls button {
-    width: 20%;
+    height: 5vh;
+    width: 40%;
     font-family: 'lulo';
-    font-size: large;
+    font-size: min(2vh, 2vw);
 }
 #addOne {
     margin-right: 20px;
@@ -204,14 +205,10 @@ img {
 #editorControls {
     width: 100%;
     left: 0;
-    top: 6vh;
-    height: 92vh;
 }
 
 #exportControls {
     right: var(--outerMargin);
-    top: 6vh;
-    height: 92vh;
     width: var(--previewWidth);  
 }
 #exportControls div {
@@ -220,7 +217,7 @@ img {
 #exportControls div button {
     height: 7vh;
     width: 7vh;
-    margin-block: calc(var(--previewWidth) * (6/8.5) + 10vh);
+    margin-block: 36vh;
 }
 #exportControls div button img {
     height: 7vh;
