--- a/public/style.css
+++ b/public/style.css
@@ -108,12 +108,19 @@ main {
 
 #formatBar button img {
     position: absolute;
-    bottom: 0;
+    bottom: -15%;
     right: 0;
     height: auto;
     width: auto;
-    max-height: 80%;
+    max-height: 115%;
     z-index: -1;
+}
+
+@media screen and (max-aspect-ratio: 1.5/1) {
+    #formatBar button img {
+        max-height: 100%;
+        right: -10%;
+    }
 }
 
 #formatBar :last-child {
