--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,6 +15,7 @@ body {
         margin-right: 1vw;
         padding-inline: 1vw;
         text-align: center;
+        text-decoration: none;
 }
 
 .highlight {
@@ -76,7 +77,7 @@ body {
 
 /* CSP SECTION */
 
-#cspIntro {
+.interlude {
         text-align: center;
         width: 60vw;
         margin: auto;
@@ -120,44 +121,79 @@ body {
 #benefitCarousel {
         height: 60vh;
         padding-inline: 35vw;
+
         display: flex;
         flex-direction: row;
+
         overflow-x: auto;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
         -webkit-overflow-scrolling: touch;
 }
 
-#benefitCarousel div {
-        scroll-snap-align: center;
-        flex-shrink: 0;
+.slide {
         width: 60vw;
         height: 80%;
         margin-left: 5vw;
         margin-block: auto;
+        padding: 5%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
         border-radius: 10px;
+        border: 5px solid var(--highlightColour);
+
+        scroll-snap-align: center;
+        flex-shrink: 0;
+
         background: #eee;
         transform-origin: center center;
         transform: scale(1);
         transition: transform 0.5s;
         position: relative;
 
+        overflow: hidden;
+}
+
+.slideImg {
+        max-height: 95%;
+        max-width: 40%;
+        margin-inline-end: 3%;
+}
+
+.slideHeader {
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 100px;
+        width: 100%;
+}
 
-        border: 5px solid var(--highlightColour);
+.slideHeader img {
+        margin-inline: 2vw;
+        max-width: 5vw;
+        max-height: 7.5vh;
+}
+
+.slide h2 {
+        font-size: 5vmin;
+        white-space: nowrap;
+}
+
+.slide p {
+        width: 100%;
+        font-size: 2vmin;
+        text-align: center;
 }
 
 #benefitCarousel::-webkit-scrollbar {
-        width: 10px;
-        height: 10px;
+        width: 0;
+        height: 0;
 }
 
 #benefitCarousel::-webkit-scrollbar-thumb {
-        background: black;
-        border-radius: 10px;
+        background: transparent;
 }
 
 #benefitCarousel::-webkit-scrollbar-track {
