--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,28 @@
     color: var(--foregroundColour);
 }
 
+#alert {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 2%;
+    backdrop-filter: blur(20px);
+    border-radius: 10px;
+    font-family: 'Motiva-Black';
+    text-align: center;
+}
+#alert h1 {
+    margin-top: 0;
+}
+#alert a {
+    text-decoration: none;
+    color: var(--foregroundColour);
+    background-color: var(--highlightColour);
+    border-radius: 5px;
+    padding: 1%;
+}
+
 body {
     margin: 0;
     height: 100vh;
