--- a/public/app/style.css
+++ b/public/app/style.css
@@ -26,7 +26,7 @@ header {
         overflow: hidden;
         text-align: center;
         font-size: 2.5vh;
-        font-family: 'Motiva-Black';
+        font-family: 'TTNorms_Bold';
 }
 
 header img,
@@ -89,7 +89,7 @@ main {
         margin: auto;
         background-color: var(--backgroundColour);
         text-align: center;
-        font-family: 'Motiva-Medium';
+        font-family: 'TTNorms_Regular';
 }
 
 #settingsPane h1 {
@@ -123,7 +123,7 @@ main {
 .formatBar button h1 {
         margin: 0;
         float: left;
-        font-family: 'Motiva-Black';
+        font-family: 'TTNorms_Bold';
         font-size: calc(30vh / var(--noFormats));
         font-weight: normal;
 }
@@ -430,6 +430,6 @@ object,
 
 #overlay p {
         text-align: center;
-        font-family: 'Motiva-Black';
+        font-family: 'TTNorms_Bold';
         color: var(--highlightColour);
 }
